perf: shorten portal loading and co-locate services with database
